# eklasescraper

./: .gitignore  README.md  eklase.py  env.example  example.py  pyproject.toml  requirements.txt
eklasescraper/: classes.py  eklase.py
