[project]
name = "eklasescraper"
version = "0.2.0"
authors = [{ name = "Kite8409", email = "em@em.id.lv" }]
description = "Can be used to access e-klase.lv programmatically"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]

dependencies = ["beautifulsoup4", "lxml", "requests", "urllib3", "DateTime"]

[project.urls]
"Homepage" = "https://github.com/Kite8409/eklasescraper"
"Bug Tracker" = "https://github.com/Kite8409/eklasescraper/issues"
